# pyseq_core

./: .gitignore  ContributerGuidelines  README.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml  pull_requests.yml  python-publish.yml
src/pyseq_core/: base_com.py  base_instruments.py  base_protocol.py  base_reagents.py  base_system.py  reservation_system.py  roi_manager.py  utils.py
src/pyseq_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pyseq_core/resources/: default.toml  machine_settings.yaml  test_experiment.toml  test_roi.toml
src/sequencers/: test_sequencer.py
tests/: conftest.py  test_base_system.py  test_protocol.py  test_reagent_manager.py
