[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyseq_core"
dynamic = ["version"]
authors = [
  { name="Kunal Pandit", email="kpandit@nygenome.org" },
]
description = "Core Pacakage for Open Source Control Software to Control Sequencers."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'attrs',
  'pyyaml',
  'ipykernel', 
  ]

[project.optional-dependencies]
dev = [
  'pytest',
  'pytest-asyncio'
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

#[tool.setuptools_scm]
version_file = "src/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_level = "DEBUG"
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"